[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahl"
version = "0.1.0"
description = "AHL Datasette Application"
requires-python = ">=3.14"
dependencies = [
    "datasette==1.0a24",
    "requests",
    "setuptools",
    "beautifulsoup4",
    "lxml",
    "pyyaml",
    "httpx>=0.28.1",
    "numpy>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-sqlite>=0.5.1",
    "rich>=14.3.3",
    "click>=8.0.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "faker",
    "pytest",
    "ruff",
    "ty",
]
